# eventpulse

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
infra/: register_schemas.py
infra/schemas/: clicks_raw_v1.avsc
infra/spark_iceberg/: spark-defaults.conf
scripts/: migrate.sh  run_spark_sql.sh
tools/data_gen/: base_generator.py  clickstream_generator.py  db_generators.py  generator.py  run.py
tools/data_gen/configs/: generator.yaml
tools/migrations/: V0__create_migration_log_table.sql  V1__create_bronze_tables.sql
